--- a/00_Intro_to_Rstudio.Rmd
+++ b/00_Intro_to_Rstudio.Rmd
@@ -2,6 +2,9 @@
 title: "Intro to R and RStudio"
 output: html_document
 date: "2025-06-11"
+editor_options: 
+  markdown: 
+    wrap: sentence
 ---
 
 ```{r setup, include=FALSE}
@@ -33,8 +36,9 @@ Scripts work just like entering commands sequentially into the **Console**, but 
 
 ## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
+This is an R Markdown document.
+Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents.
+For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 ### Comments (the '\#' symbol):
 
@@ -65,7 +69,8 @@ Did you notice a new window appear under the code block?
 We call this the "output" window - it prints out all lines in the code block that are meant to be printed out.
 Depending on the assignment, we may ask you to keep this output in your submission so we can check your numbers.
 
-When compiling an R markdown document, you can click the **Knit** button - a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+When compiling an R markdown document, you can click the **Knit** button - a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.
+You can embed an R code chunk like this:
 
 ```{r cars}
 summary(cars)
@@ -475,5 +480,3 @@ hist(iris$Sepal.Width,breaks = 10)
 ggplot(iris,aes(x=Sepal.Width)) + 
   geom_histogram(bins = 10,alpha = 0.7,color='white')
 ```
-
-
