--- a/01_Pulse_analysis.Rmd
+++ b/01_Pulse_analysis.Rmd
@@ -5,7 +5,6 @@ output: html_notebook
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(readr)
 library(ggplot2)
 library(emmeans)
 library(lme4)
@@ -18,7 +17,7 @@ library(cowplot)
 ## Step 1 - load the spreadsheet
 
 ```{r}
-expt1_data = read_csv('data/Experiment1.csv')
+expt1_data = read.csv('data/Experiment1.csv')
 ```
 
 ## Step 2 - Inspect the data
