--- a/02_Tutorial_1_basic_factorial.Rmd
+++ b/02_Tutorial_1_basic_factorial.Rmd
@@ -10,7 +10,6 @@ runtime: shiny_prerendered
 ```{r setup, include=FALSE}
 library(learnr)
 knitr::opts_chunk$set(echo = FALSE)
-library(readr)    # for loading data in a clean way
 library(ggplot2)  # for making nice plots
 library(cowplot)  # for making nicer plots
 library(emmeans)  # for extracting the results of an analysis
@@ -21,7 +20,7 @@ library(multcomp) # for better hypothesis tests
 library(multcompView) # for better hypothesis tests
 library(PLS205)   # additional helper functions I've written for teaching
 
-bolting_data_1 = read_csv('data/Bolting_experiment_1.csv')
+bolting_data_1 = read.csv('data/Bolting_experiment_1.csv')
 ```
 
 ## Description of the experiment and goals
@@ -80,7 +79,7 @@ Most data are stored in spreadsheets.
 It is best to store spreadsheets in text formats like `csv` or `tsv`.
 This makes them easier to load into `R`.
 
-Our data is stored in a comma-separated-values table, so we'll use the `read_csv()` function.
+Our data is stored in a comma-separated-values table, so we'll use the `read.csv()` function.
 
 We have to tell it the **file name** and the **folder name** *if it is not in the folder where this script is saved*.
 
@@ -89,15 +88,17 @@ The file is: `Bolting_experiment_1.csv` and it is in the `data` folder.
 > Enter: `folder/file.csv` into the code box below between the `''` characters.
 
 ```{r ex1, exercise=TRUE, exercise.lines = 5}
-bolting_data_1 = read_csv('data/Bolting_experiment_1.csv')
+bolting_data_1 = read.csv('')
 ```
 
-When you run the command, you will see various output describing what was loaded.
-You should check this carefully to make sure that `R` loaded the table correctly.
-It is good to have the file open in `Excel` and compare.
+When you run the command, you won't see anything happen unless there are errors.
+We'll check that it worked right next ...
+
 
 ## Analysis 1 - Viewing the data
 ### 2. Viewing the data
+
+It is good to have the file open in `Excel` to compare to how `R` sees it.
 
 There are various ways to view a data table in `R`:
 
@@ -111,7 +112,7 @@ Try these below or in the Console.
 **Note**: the Console is independent of the `learnr` tutorial.
 You'll need to re-load the data there using:
 
-`bolting_data_1 = read_csv('data/Bolting_experiment_1.csv')`
+`bolting_data_1 = read.csv('data/Bolting_experiment_1.csv')`
 
 ```{r view1,exercise=TRUE}
 
@@ -309,7 +310,7 @@ Note: for compact letter displays, ignore the "SE", "df", "t.ratio" and "p.value
 ## Full code for the analysis
 
 ```{r full_code,exercise=TRUE,exercise.lines = 21}
-bolting_data_1 = read_csv('data/Bolting_experiment_1.csv')
+bolting_data_1 = read.csv('data/Bolting_experiment_1.csv')
 bolting_data_1$mutant = factor(bolting_data_1$mutant,levels = c('WT','flc-3','vin3-4'))
 str(bolting_data_1)
 
